2005-08-11  Werner Koch  <wk@g10code.com>

	* GPGExch.cpp (ExchLogInfo): Changed to make use of
	MapiGPGME->logDebug.

2005-08-09  Timo Schulz  <ts@g10code.com>

	* GPGOptionsDlg.cpp: Include MapiGPGME.h and
	HashTable.h from ../src. This fixes the unresolved
	object problem.

2005-08-09  Werner Koch  <wk@g10code.com>

	* GPGExch.cpp: Removed HashTable.h.  Include MapiGPGME.h from
	../src.
	(CGPGExchExt): Use factory method instead of new to create the
	gpgme object.

2005-07-18  Timo Schulz  <twoaday@g10code.com>

	* GPGExch.cpp (GetPages): Native language support.
	* GPGExch.rc: New dialog in German.

2005-07-05  Timo Schulz  <twoaday@g10code.de>

	* GPGOptionsDlg.cpp (GPGOptionsDlgProc): Support
	for 'sign attachment' flag.

2005-06-16  Timo Schulz  <twoaday@g10code.de>

	* GPGOptionsDlg.cpp (GPGOptionsDlgProc#PSN_ACTIVE):
	Reset the bool value if no default key value was set.

2005-06-14  Timo Schulz  <twoaday@g10code.de>

	* GPGExch.cpp (Help): Use appropriate array boundaries.
	(OnWriteComplete): Removed unused code.
	(CGPGExchExt): There is no need to initialize the COM
	library any longer.
	(~CGPGExchExt): Likewise, but we don't need to unload it.
	* GPGOptionsDlg.cpp (GPGOptionsDlgProc): Support to
	store also the default 'encrypt-to' ID.

2005-05-03  Timo Schulz  <twoaday@g10code.de>

	* GPGExch.cpp: Remove 'Add standard key' items.
	Use symbolic names for constants and not Command1, 2...

2005-05-02  Timo Schulz  <twoaday@g10code.de>

	* GPGExch.cpp (OnWriteComplete): Replaced old gdgpg
	code with the new gpgmedlgs code.

2005-02-15  Timo Schulz  <twoaday@g10code.de>

	* GPG.cpp: Fixed indent level and minor tweaks.
	* GPGExch.cpp (OnRead): Do not allow to modify the object
	unless it has encrypted attachments. This propably fixes the
	problem that mails are sometimes stored in plaintext.

2005-02-14  Timo Schulz  <twoaday@g10code.de>

	* GPGExch.cpp (OnRead): Check return value. Noted by Dennis Martin.