@@ -3,6 +3,7 @@ The file contains binary files of all plugin components for testing.
 
 To install them do the following steps:
 
-1) regsvr32 gpgexch.dll
-2) copy libgpgmedlgs.dll c:\windows\system32 (\system for W9X)
+1) regsvr32 olgpgmain.dll
+2) copy olgpgcore.dll c:\windows\system32 (\system for W9X)
+
 
