@@ -1,3 +1,8 @@
+2005-08-12  Timo Schulz  <ts@g10code.com>
+
+	* GPGExch.cpp (DllRegisterServer): Also create the OutlGPG
+	registry folder.
+
 2005-08-11  Werner Koch  <wk@g10code.com>
 
 	* GPGExch.cpp (ExchLogInfo): Changed to make use of
